--- a/mybatis-plus-demo/pom.xml
+++ b/mybatis-plus-demo/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.lyl</groupId>
-    <artifactId>mybatis-plus-multi-datasource</artifactId>
+    <artifactId>mybatis-plus-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mybatis-plus-multi-datasource</name>
+    <name>mybatis-plus-demo</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
