--- a/mybatis-plus-demo/src/main/resources/application.yml
+++ b/mybatis-plus-demo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mp_demo?serverTimezone=UTC
+    url: jdbc:mysql://121.89.199.231:3306/mp_demo?serverTimezone=UTC
     username: root
     password: Lyl123456
     type: com.alibaba.druid.pool.DruidDataSource
@@ -35,5 +35,5 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    map-underscore-to-camel-case: false
+#    map-underscore-to-camel-case: false
   mapper-locations: classpath*:/mapper/*.xml
