--- a/mybatis-plus-demo/src/main/resources/application.yml
+++ b/mybatis-plus-demo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://121.89.199.231:3306/mp_demo?serverTimezone=UTC
+    url: jdbc:mysql://121.89.199.231:3306/mp_demo?serverTimezone=UTC&rewriteBatchedStatements=true
     username: root
     password: Lyl123456
     type: com.alibaba.druid.pool.DruidDataSource
