--- a/miaosha/src/main/resources/application.yml
+++ b/miaosha/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     username: root
     password: Lyl123456
     type: com.alibaba.druid.pool.DruidDataSource
+  redis:
+    host: 121.89.199.231
+    password: 123456
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml
   type-aliases-package: com.lyl.ms.entity
