--- a/miaosha-demo/pom.xml
+++ b/miaosha-demo/pom.xml
@@ -9,14 +9,28 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.lyl</groupId>
-    <artifactId>ms</artifactId>
+    <artifactId>miaosha-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ms</name>
+    <name>miaosha-demo</name>
     <description>秒杀项目</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!--guava-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--fastjson-->
         <dependency>
