--- a/miaosha-demo/src/main/resources/application.yml
+++ b/miaosha-demo/src/main/resources/application.yml
@@ -8,6 +8,16 @@ spring:
   redis:
     host: 121.89.199.231
     password: 123456
+    timeout: 60s
+      ## springboot2.0之后将连接池由jedis改为lettuce
+    lettuce:
+      pool:
+        max-idle: 30
+        max-active: 8
+        max-wait: 10000
+        min-idle: 10
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml
   type-aliases-package: com.lyl.ms.entity
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  #mybatis-plus日志
